# BatteryMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
battery/: AirPodsProvider.cpp  AirPodsProvider.h  BatteryManager.h  BluetoothProvider.cpp  BluetoothProvider.h  ClassicBluetoothProvider.h  IBatteryProvider.h  XboxProvider.cpp  XboxProvider.h
cmake/: GenerateVersion.cmake
docs/: websocket-api-en.md  websocket-api.md  websocket-test.html
lang/: BatteryMonitor_zh_CN.ts
res/: app.rc.in  resources.qrc
scripts/: install-udev-rules.sh  logitech_mx_master_4_battery.py  razer_mouse_dock_battery.py  rog-strix-scope-rx-tkl-dongle.py  rog_keris_mouse_battery.py  xinput_connection_check.py
src/core/: BatteryDevice.h  BatteryManager.cpp  BatteryManager.h
src/history/: BatteryHistoryChart.cpp  BatteryHistoryChart.h  BatteryHistoryStore.cpp  BatteryHistoryStore.h
src/providers/bluetooth/: AirPodsProvider.cpp  AirPodsProvider.h  BluetoothProvider.cpp  BluetoothProvider.h  ClassicBluetoothProvider.cpp  ClassicBluetoothProvider.h
src/providers/hid/: AsusMouseHidProvider.cpp  AsusMouseHidProvider.h  AsusRogHidProvider.cpp  AsusRogHidProvider.h  AulaHidProvider.cpp  AulaHidProvider.h  HidApiLock.h  LogitechHidProvider.cpp  LogitechHidProvider.h  RazerHidProvider.cpp  RazerHidProvider.h  VgnHidProvider.cpp  VgnHidProvider.h
src/providers/xbox/: XboxProvider.cpp  XboxProvider.h
src/rpc/: DeviceJson.cpp  DeviceJson.h  JsonRpc.cpp  JsonRpc.h  RpcServer.cpp  RpcServer.h
util/: AppSettings.cpp  AppSettings.h  DeviceSettings.cpp  DeviceSettings.h  GeneratedAppVersion.h.in  Logger.cpp  Logger.h
